release/src/router/dbus-1.8.8/test/data/valid-messages/array-of-array-of-uint32.message
# Message with an array of array of uint32

VALID_HEADER method_call
REQUIRED_FIELDS
ALIGN 8
END_LENGTH Header
START_LENGTH Body

TYPE ARRAY
TYPE ARRAY
TYPE UINT32

LENGTH Array
START_LENGTH Array

## array of uint32
LENGTH SubArray1
START_LENGTH SubArray1
UINT32 1
UINT32 2
UINT32 3
END_LENGTH SubArray1

## array of uint32
LENGTH SubArray2
START_LENGTH SubArray2
UINT32 4
UINT32 5
END_LENGTH SubArray2

END_LENGTH Array

END_LENGTH Body
